use app-list and exec-from-app-list as launchers

--- a/config.d/40-menu.conf
+++ b/config.d/40-menu.conf
@@ -1,3 +1,4 @@
 set $launcher \
-	dmenu_path | \
-	dmenu -i -p 'Exec:' -nb "$opaquebgcolor" -sb "$primarycolor"
+	app-list | \
+	dmenu -i -p 'Exec:' -nb "$opaquebgcolor" -sb "$primarycolor" | \
+	sed -e "s/^/exec-from-app-list /"
