--- a/config.d/50-shortcuts.conf
+++ b/config.d/50-shortcuts.conf
@@ -144,6 +144,8 @@ bindsym {
 
 	XF86AudioRaiseVolume exec volume +10%
 	XF86AudioLowerVolume exec volume -10%
+
+	$mod1+n exec toggle-notifications
 }
 
 #
