--- a/config.d/50-shortcuts.conf
+++ b/config.d/50-shortcuts.conf
@@ -139,8 +139,8 @@ bindsym {
 	$k3_print exec printscr area
 	$mod2+$k3_print exec printscr fullscreen
 
-	XF86MonBrightnessUp exec brightnessctl s +15%
-	XF86MonBrightnessDown exec brightnessctl s 15%-
+	XF86MonBrightnessUp exec brightness +15%
+	XF86MonBrightnessDown exec brightness 15%-
 
 	XF86AudioRaiseVolume exec volume +5%
 	XF86AudioLowerVolume exec volume -5%
