reorganize communication apps

--- a/config.d/40-workspaces.conf
+++ b/config.d/40-workspaces.conf
@@ -1,6 +1,6 @@
 set {
 	$ws0 0 Desk
-	$ws1 1 Chat
+	$ws1 1 Comm
 	$ws2 2 Netw
 	$ws3 3 Code
 	$ws4 4 File
@@ -11,8 +11,9 @@ set {
 	$ws9 9 Audi
 }
 
-### Chat apps
+### Comm apps
 assign [class="Ferdium"] $ws1
+assign [class="thunderbird"] $ws1
 
 ### Netw apps
 assign [app_id="firefox"] $ws2
