set opacity for the notification center

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -18,5 +18,6 @@ client.focused $primarycolor $darkprimarycolor $fontcolor $primarycolor $primary
 for_window {
 	[app_id="foot"] opacity set 0.95
 	[app_id="firefox"] opacity set 0.95
+	[app_id="notification-center"] opacity set 0.95
 	[app_id="org.kde.elisa"] opacity set 0.875
 }
