adjust settings for new battery stats popup

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -16,6 +16,7 @@ gaps inner 16
 client.focused $primarycolor $darkprimarycolor $fontcolor $primarycolor $primarycolor
 
 for_window {
+	[app_id="battery-stats"] opacity set 0.95
 	[app_id="foot"] opacity set 0.95
 	[app_id="firefox"] opacity set 0.95
 	[app_id="notification-center"] opacity set 0.95
