--- a/config.d/50-floating-apps.conf
+++ b/config.d/50-floating-apps.conf
@@ -1,13 +1,20 @@
-for_window [app_id="notification-center"] {
+for_window [app_id="battery-stats"] {
 	floating enable;
+	resize set width 336px height 128px;
 	move position cursor;
 	move down 36px;
-	resize set width 336px;
 }
 
 for_window [app_id="nmtui"] {
 	floating enable;
-	move position cursor;
-	move down 160px;
 	resize set width 576px height 768;
+	move position cursor;
+	move down 36px;
+}
+
+for_window [app_id="notification-center"] {
+	floating enable;
+	resize set width 336px;
+	move position cursor;
+	move down 36px;
 }
