disable firefox auto-move

--- a/config.d/40-workspaces.conf
+++ b/config.d/40-workspaces.conf
@@ -16,7 +16,7 @@ assign [class="Ferdium"] $ws1
 assign [class="thunderbird"] $ws1
 
 ### Netw apps
-assign [app_id="firefox"] $ws2
+# assign [app_id="firefox"] $ws2
 
 ### Game apps
 assign [app_id="com.moonlight_stream.Moonlight"] $ws5
