adjust background and colors

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -1,11 +1,11 @@
 output * background ~/.local/share/backgrounds/default fill
 
-set $primarycolor #ad4546
-set $darkprimarycolor #7b1313ca
-set $opaquedarkprimarycolor #662025
+set $primarycolor #1877f2
+set $darkprimarycolor #768ac4
 set $fontcolor #ffffff
-set $faintfontcolor #7f7f7f
-set $bgcolor #132730
+set $faintfontcolor #afafaf
+set $bgcolor #4e234ab0
+set $opaquebgcolor #46214d
 set $font Fira Code
 set $fontsize 11
 set $menufontsize 12
@@ -20,7 +20,7 @@ font "$font" $fontsize
 
 for_window {
 	[app_id="battery-stats"] opacity set 0.95
-	[app_id="foot"] opacity set 0.875
-	[app_id="music"] opacity set 0.875
+	[app_id="foot"] opacity set 0.75
+	[app_id="music"] opacity set 0.75
 	[app_id="notification-center"] opacity set 0.95
 }
