--- a/config.d/40-menu.conf
+++ b/config.d/40-menu.conf
@@ -1,4 +1,4 @@
 set $launcher \
 	app-list | \
-	dmenu -i -l 25 -p 'Exec:' -nb "$bgcolor" -sb "$opaquedarkprimarycolor" -nf "$fontcolor" -fn "$font:size=$menufontsize" | \
+	dmenu -i -l 25 -p 'Exec:' -nb "$opaquebgcolor" -sb "$darkprimarycolor" -nf "$fontcolor" -sf "$fontcolor" -fn "$font:size=$menufontsize" | \
 	sed -e "s/^/exec-from-app-list /"
