--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -5,7 +5,7 @@ set $darkprimarycolor #7b1313ca
 set $opaquedarkprimarycolor #7b1313
 set $fontcolor #ffffff
 set $faintfontcolor #7f7f7f
-set $bgcolor #222222ca
+set $bgcolor #132730
 set $opaquebgcolor #222222
 
 default_border pixel 3
@@ -17,8 +17,7 @@ client.focused $primarycolor $darkprimarycolor $fontcolor $primarycolor $primary
 
 for_window {
 	[app_id="battery-stats"] opacity set 0.95
-	[app_id="foot"] opacity set 0.95
+	[app_id="foot"] opacity set 0.875
 	[app_id="firefox"] opacity set 0.95
 	[app_id="notification-center"] opacity set 0.95
-	[app_id="org.kde.elisa"] opacity set 0.875
 }
