--- a/config.d/40-workspaces.conf
+++ b/config.d/40-workspaces.conf
@@ -12,11 +12,14 @@ set {
 }
 
 ### Comm apps
+assign [app_id="discord"] $ws1
 assign [class="Ferdium"] $ws1
+assign [app_id="gather"] $ws1
 assign [class="thunderbird"] $ws1
+assign [app_id="whatsapp"] $ws1
 
 ### Netw apps
-# assign [app_id="firefox"] $ws2
+assign [app_id="firefox"] $ws2
 
 ### Game apps
 assign [app_id="com.moonlight_stream.Moonlight"] $ws5
