fix dmenu colors

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -2,10 +2,10 @@ output * background /usr/share/backgrounds/adwaita-extended/wallhaven.png fill
 
 set $primarycolor #ad4546
 set $darkprimarycolor #7b1313ca
+set $opaquedarkprimarycolor #662025
 set $fontcolor #ffffff
 set $faintfontcolor #7f7f7f
 set $bgcolor #132730
-set $opaquebgcolor #222222
 
 default_border pixel 3
 smart_borders on
