fix size discrepancy between status bar and dmenu

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -6,6 +6,7 @@ set $opaquedarkprimarycolor #662025
 set $fontcolor #ffffff
 set $faintfontcolor #7f7f7f
 set $bgcolor #132730
+set $font Roboto Mono 11
 
 default_border pixel 3
 smart_borders on
@@ -13,6 +14,7 @@ smart_gaps on
 gaps outer 8
 gaps inner 16
 client.focused $primarycolor $darkprimarycolor $fontcolor $primarycolor $primarycolor
+font $font
 
 for_window {
 	[app_id="battery-stats"] opacity set 0.95
