--- a/config.d/40-menu.conf
+++ b/config.d/40-menu.conf
@@ -1,4 +1,4 @@
 set $launcher \
 	app-list | \
-	dmenu -i -p 'Exec:' -nb "$bgcolor" -sb "$opaquedarkprimarycolor" -nf "$fontcolor" | \
+	dmenu -i -p 'Exec:' -nb "$bgcolor" -sb "$opaquedarkprimarycolor" -nf "$fontcolor" -fn "$font" | \
 	sed -e "s/^/exec-from-app-list /"
