--- a/config.d/60-statusbar.conf
+++ b/config.d/60-statusbar.conf
@@ -10,5 +10,6 @@ bar {
 		background $bgcolor
 		focused_workspace $primarycolor $darkprimarycolor $fontcolor
 		inactive_workspace $bgcolor $bgcolor $faintfontcolor
+		height 24
 	}
 }
