switch menu to a vertical layout

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -8,6 +8,7 @@ set $faintfontcolor #7f7f7f
 set $bgcolor #132730
 set $font Fira Code
 set $fontsize 11
+set $menufontsize 12
 
 default_border pixel 3
 smart_borders on
