change background file location

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -1,4 +1,4 @@
-output * background /usr/share/backgrounds/adwaita-extended/wallhaven.png fill
+output * background ~/.local/share/backgrounds/default fill
 
 set $primarycolor #ad4546
 set $darkprimarycolor #7b1313ca
