add opacity to music player

--- a/config.d/30-visuals.conf
+++ b/config.d/30-visuals.conf
@@ -21,5 +21,6 @@ font "$font" $fontsize
 for_window {
 	[app_id="battery-stats"] opacity set 0.95
 	[app_id="foot"] opacity set 0.875
+	[app_id="music"] opacity set 0.875
 	[app_id="notification-center"] opacity set 0.95
 }
