use ralt as secondary compose key

--- a/config.d/50-keyboard.conf
+++ b/config.d/50-keyboard.conf
@@ -1,4 +1,4 @@
 input "type:keyboard" {
 	xkb_layout us(dvp)
-	xkb_options "compose:rwin,caps:escape_shifted_capslock"
+	xkb_options "compose:rwin,compose:ralt,caps:escape_shifted_capslock"
 }
