revamp workspace organization

--- a/config.d/40-workspaces.conf
+++ b/config.d/40-workspaces.conf
@@ -1,15 +1,22 @@
 set {
-	$ws0 0 Desk
-	$ws1 1 Comm
-	$ws2 2 Netw
-	$ws3 3 Code
-	$ws4 4 File
-	$ws5 5 Game
-	$ws6 6 Temp
-	$ws7 7 Temp
-	$ws8 8 Temp
-	$ws9 9 Audi
+	$wsP "0:P Pass"
+	$wsM "1:M Musc"
+	$ws1 "2:1 Comm"
+	$ws2 "3:2 Netw"
+	$ws3 "4:3 Code"
+	$ws4 "5:4 File"
+	$ws5 "6:5 Game"
+	$ws6 "7:6 Desk"
+	$ws7 "8:7 Desk"
+	$ws8 "9:8 Desk"
 }
+
+### Pass apps
+assign [app_id="org.keepass.KeePassXC"] $wsP
+
+### Musc apps
+assign [app_id="easyeffects"] $wsM
+assign [app_id="music"] $wsM
 
 ### Comm apps
 assign [app_id="discord"] $ws1
@@ -23,8 +30,3 @@ assign [app_id="firefox"] $ws2
 
 ### Game apps
 assign [app_id="com.moonlight_stream.Moonlight"] $ws5
-
-### Audio apps
-assign [app_id="rhythmbox"] $ws9
-assign [app_id="easyeffects"] $ws9
-assign [app_id="org.kde.elisa"] $ws9
