--- a/config.d/50-shortcuts.conf
+++ b/config.d/50-shortcuts.conf
@@ -74,6 +74,8 @@ bindsym {
 	$mod1+Home workspace prev
 
 	# Switch to workspace
+	$mod1+p workspace $wsP
+	$mod1+m workspace $wsM
 	$mod1+$num1 workspace $ws1
 	$mod1+$num2 workspace $ws2
 	$mod1+$num3 workspace $ws3
@@ -82,9 +84,9 @@ bindsym {
 	$mod1+$num6 workspace $ws6
 	$mod1+$num7 workspace $ws7
 	$mod1+$num8 workspace $ws8
-	$mod1+$num9 workspace $ws9
-	$mod1+$num0 workspace $ws0
 	# Move focused container to workspace
+	$mod1+$mod2+p move container to workspace $wsP
+	$mod1+$mod2+m move container to workspace $wsM
 	$mod1+$mod2+$num1 move container to workspace $ws1
 	$mod1+$mod2+$num2 move container to workspace $ws2
 	$mod1+$mod2+$num3 move container to workspace $ws3
@@ -93,8 +95,6 @@ bindsym {
 	$mod1+$mod2+$num6 move container to workspace $ws6
 	$mod1+$mod2+$num7 move container to workspace $ws7
 	$mod1+$mod2+$num8 move container to workspace $ws8
-	$mod1+$mod2+$num9 move container to workspace $ws9
-	$mod1+$mod2+$num0 move container to workspace $ws0
 
 	#
 	# Layout stuff:
