--- a/config.d/60-statusbar.conf
+++ b/config.d/60-statusbar.conf
@@ -3,6 +3,8 @@ bar {
 
 	status_command env MAX_CHARGE=79 bacons-swaybar 2>~/.var/swaybar.log
 
+	strip_workspace_numbers yes
+
 	tray_output none
 
 	colors {
